--- a/index.html
+++ b/index.html
@@ -8,16 +8,27 @@
             background-color: #222;
             color: #fff;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
             margin: 0;
         }
+
+        img {
+            max-width: 100%;
+            max-height: 50px;
+        }
+
+        h1 {
+            margin-top: 40px;
+        }
     </style>
 </head>
 
 <body>
-    <h1>服务器流量过载，请明天上午再试</h1>
+    <img src="logo.png" alt="Logo" />
+    <h1>Server traffic overload. Please try again tomorrow</h1>
 </body>
 
 </html>
